--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ManagerPhoneActivity"></activity>
+        <activity android:name=".ManagerUserActivity"></activity>
+        <activity android:name=".ManagerFeedBackActivity" />
+        <activity android:name=".ManagerPhoneActivity" />
         <activity android:name=".TransactionHistoryActivity" />
         <activity android:name=".FeedBackActivity" />
         <activity android:name=".ChangePasswordActivity" />
