--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ManagerUserActivity"></activity>
+        <activity android:name=".StatisticalActivity"></activity>
+        <activity android:name=".RegisterProfileActivity" />
+        <activity android:name=".ForgotPasswordActivity" />
+        <activity android:name=".ManagerUserActivity" />
         <activity android:name=".ManagerFeedBackActivity" />
         <activity android:name=".ManagerPhoneActivity" />
         <activity android:name=".TransactionHistoryActivity" />
@@ -30,6 +33,27 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
