--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StatisticalActivity"></activity>
+        <activity android:name=".StatisticalActivity">
+        </activity>
         <activity android:name=".RegisterProfileActivity" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".ManagerUserActivity" />
